# binaryneuralnet-asic-TTIHP26

./: .gitignore  info.yaml
bnn_mnist_training/: Main_BareMetalTreeInference.py  Main_DecisionTree.py  Main_TrainDecisionTree.py  Model_BasicCNN.py  Model_FullBNN.py  Model_QuantizedAE.py  Model_TowardsBNN.py  lab_autoenc_decisiontree.ipynb  lab_autoencoder.ipynb  lab_baremetal_bcnninference.ipynb  lab_baremetaltreeinference.ipynb  lab_model_exploration.ipynb  lab_quant_inference.ipynb  pyproject.toml
bnn_mnist_training/data/embedding_table/: train_embeddings.parquet  val_embeddings.parquet
bnn_mnist_training/data/model_weights/: FullBNN.pnn  QuantizedAE.pnn  TowardsBNN.pnn
bnn_mnist_training/func/: binarize_embeddings.py  load_mnist.py  model_main.py  plot_preprocessed_image_table.py  train_epoch.py  validate_model.py
bnn_mnist_training/model_lib/: BinaryConv2d.py  BinaryLinear.py  LearnableShift.py  QuantizeBinary.py  __init__.py
codegen/: classifiction_tree.sv.jinja  conv_weights_2x2.sv.jinja  conv_weights_3x3.sv.jinja  main.py  pyproject.toml  tree.py
docs/: RM_IHPSG13_1P_256x8_c3_bm_bist.txt  info.md
macros/SRAM/: RM_IHPSG13_1P_256x8_c3_bm_bist.v
src/: classification_tree.sv  config.json  conv_layer1.sv  conv_layer2.sv  conv_layer3.sv  conv_weights_2x2_l3.sv  conv_weights_3x3_l1.sv  conv_weights_3x3_l2.sv  counter4bit.sv  load_conv_op_3x6.sv  main.sv  maxpool_2x2.sv  mnist_loader.sv  pdn_cfg.tcl  project.v  sram.sv
test/: Makefile  run_tests.sh
test/sramdump/: conv_layer1.dump  full_pipeline.dump  load_conv_op.dump  maxpool_layer1.dump  mnist_loader.dump
test/testbenches/: tb.v  tb_classification_tree.sv  tb_conv_layer1.sv  tb_conv_weights_3x3_l1.sv  tb_counter4bit.sv  tb_load_conv_op.sv  tb_main_full.sv  tb_maxpool_layer1.sv  tb_mnist_loader.sv  tb_sram.sv
test/testmodules/: test_classification_tree.py  test_cloud.py  test_conv_layer1.py  test_conv_weights_3x3_l1.py  test_counter4bit.py  test_full_pipeline.py  test_load_conv_op.py  test_maxpool_layer1.py  test_mnist_loader.py  test_sram.py
test/waves/: tb.fst  tb_classification_tree.fst  tb_sram.fst  (+6 more)
(+3 files in other folders)
